<resources>
    <string name="app_name">GO2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="business">活动来袭</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>

    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <string name="uesrTips">未认证</string>

    <string name="plan">训练计划</string>
    <string name="fitnessGuide">健身指南</string>
    <string name="wallet">我的钱包</string>
    <string name="scan">扫一扫</string>
    <string name="invite">邀请好友</string>
    <string name="friends">好友圈</string>
    <string name="about">关于我们</string>

    <string name="chooseMachine">选择器械</string>
    <string name="run">跑步机</string>
    <string name="bicycle">动感单车</string>
    <string name="beauty">蝴蝶机</string>
    <string name="boat">划船机</string>
    <string name="chooseTime">选择时长</string>
    <string name="time1">30min</string>
    <string name="time2">60min</string>
    <string name="time3">90min</string>
    <string name="time4">120min</string>

    <string name="money">提交订单</string>
    <string name="choosePay">选择支付方式</string>
    <string name="ali_pay">支付宝</string>
    <string name="we_chat">微信</string>

    <string name="mapTips">健身设备待机中>>></string>

    <string name="QRerror"></string>

    <string name="location">定位</string>
    <string name="order">立即预约</string>
    <string name="feedback">反馈</string>
</resources>
