<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/plan"
            android:icon="@drawable/ic_menu_recorder"
            android:title="@string/plan" />
        <item
            android:id="@+id/fitnessGuide"
            android:icon="@drawable/ic_menu_guide"
            android:title="@string/fitnessGuide" />
        <item
            android:id="@+id/scan"
            android:icon="@drawable/ic_menu_scan"
            android:title="@string/scan" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/invite"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/invite" />
            <item
                android:id="@+id/friends"
                android:icon="@drawable/ic_menu_friends"
                android:title="@string/friends" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />

        </menu>
    </item>

</menu>
